# pygmid

./: .coverage  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish-to-pypi.yml  publish-to-testpypi-pypi.yml  python-publish.yml  run-tests.yml
src/: .gitignore
src/pygmid/: Lookup.py  Spectre.py  Sweep.py  __init__.py  __main__.py  constants.py  numerical.py  pygmid.py  utility.py
src/pygmid/sweep/: .config.py.swp  __init__.py  __main__.py  config.py  config_IHP130.cfg  parser.py  pysweep.py  pysweep_gpdk090.py  requirements.txt  simulator.py  sweep.py
src/pysweep/: config.cfg  config_gpdk090.cfg  pysweep.scs  pysweep_gpdk090.py  setup.sh
tests/: .gitignore  conftest.py  gen_data.m  should_run.py  test_lookup.py  test_lookupVGS.py  test_utility.py
tests/debug/: debug_Slides.py  debug_lookup.py  debug_utility.py
tests/files/: gen_test_lookup_data.mat
tests/pygmid/: test_lookup.py
tests/pygmid/sweep/: IHP130nm.cfg  config_IHP130.cfg  config_gpdk090.cfg  conftest.py  sample_config.cfg  test_sweep.py
