[metadata]
name = pygmid
version = attr: pygmid.__version__
author = Cian O`Donnell, Tiarnach Ó Riada, Danylo Galach
author_email = cian.odonnell@tyndall.ie
description = A python 3 implementation of the gm/ID starter kit
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/madrasalach/pygmid
project_urls =
    Bug Tracker = https://github.com/madrasalach/pygmid/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.4
setup_requires = 
    numpy
    scipy
    matplotlib
install_requires = 
    numpy
    scipy
    matplotlib  

[options.packages.find]
where = src
